# Simple-Geometry-Wars

./: CMakeLists.txt  config.json  readme.md
include/: Components.h  ConfigLoader.h  Entity.h  EntityManager.h  Game.h  GameConfig.h  RandomGenerator.h  Vec2.h
src/: ConfigLoader.cpp  EntityManager.cpp  Game.cpp  main.cpp
